# host-prove

./: .gitignore  Cargo.toml  README.md  host-prove.allium  host-prove.obligations
.cargo/: config.toml
.github/workflows/: ci.yml
install/: _common.sh  install-apalache.sh  install-kani.sh  install-tlaps.sh
scripts/: apalache_check.sh  kani_check.sh  tlapm_check.sh  verdict.py
skills/apalache-symbolic/: SKILL.md  guide.md
skills/apalache-symbolic/references/: cli-and-ci.md
skills/kani-conformance/: SKILL.md  guide.md
skills/kani-conformance/references/: cli-and-ci.md
skills/tlaps-proof/: SKILL.md  guide.md
src/: main.rs
tests/: run.sh
tests/fixtures/: apalache_check_error.txt  apalache_check_noerror.txt  apalache_typecheck_err.txt  apalache_typecheck_ok.txt  kani_error.txt  kani_failed.txt  kani_success.txt  tlaps_allproved.txt  tlaps_failed.txt
