[package]
name = "host-prove"
version = "0.2.3"
edition = "2021"
description = "Parse a verifier's raw output into one machine-matchable verdict line + bound (host-prove lane driver)"
license = "Unlicense"

[[bin]]
name = "host-prove"
path = "src/main.rs"

# Reproducible builds: strip symbols and the .comment section (which embed the build
# host's toolchain/distro). Combined with --build-id=none (.cargo/config.toml), the
# release binary carries no build-environment metadata, so it hashes the same anywhere.
[profile.release]
strip = true
